--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+     <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -12,29 +17,44 @@
       <h1>Weather Dashboard</h1>
     </nav>
     <article>
-        <div class="city_search">
-            <h2>Search for a city:</h2>
-            <input type="search" >
-            <br>
-            <button id="search_btn">Search</button>
+       <div class="city_search">
+        <h2>Search for a city:</h2>
+        <input type="text" placeholder="Enter city name" />
+        <br />
+        <button id="search_btn">Search</button>
         </div>
+      </div>
+      <div class="default_city" id="1"></div>
+      <div class="default_city" id="2"></div>
+      <div class="default_city" id="3"></div>
+      <div class="default_city" id="4"></div>
+      <div class="default_city" id="5"></div>
+      <div class="default_city" id="6"></div>
+      <div class="default_city" id="7"></div>
+      <div class="default_city" id="8"></div>
     </article>
-    <section>
-        <div class="main_display">
-        <h2>Context</h2>
+    <div class="main_display">
+        <h3 id="city"></h3>
         <p id="temp">Temp:</p>
         <p id="wind">Wind:</p>
         <p id="humidity">Humidity:</p>
         </div>
-    </section>
-    <section>
-        <h3>5-day Forecast:</h3>
+    <section id="space">
+      <!-- <div class="main_display">
+        <h2 id="inside">Context</h2>
+        <p id="temp">Temp:</p>
+        <p id="wind">Wind:</p>
+        <p id="humidity">Humidity:</p>
+        </div>
+     -->
+      <h3>5-day Forecast:</h3>
         <div class="panel" id="first_panel"></div>
         <div class="panel" id="second_panel"></div>
         <div class="panel" id="third_panel"></div>
         <div class="panel" id="fourth_panel"></div>
-        <div class="panel" id="fifth_panel"></div>
+        <div class="panel" id="fifth_panel"></div> 
     </section>
   </body>
+  
   <script src="script.js"></script>
 </html>
