before i break it

--- a/index.html
+++ b/index.html
@@ -21,17 +21,33 @@
         <h2>Search for a city:</h2>
         <input type="text" placeholder="Enter city name" />
         <br />
-        <button id="search_btn">Search</button>
+        <button  id="search_btn">Search</button id="uwu">
         </div>
       </div>
-      <div class="default_city" id="1"></div>
-      <div class="default_city" id="2"></div>
-      <div class="default_city" id="3"></div>
-      <div class="default_city" id="4"></div>
-      <div class="default_city" id="5"></div>
-      <div class="default_city" id="6"></div>
-      <div class="default_city" id="7"></div>
-      <div class="default_city" id="8"></div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Atlanta</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Denver</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Seattle</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">San Francisco</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Orlando</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">New York</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Chicago</button id="uwu">
+      </div>
+      <div class="default_city" id="unu">
+        <button id="uwu">Austin</button id="uwu">
+      </div>
     </article>
     <div class="main_display">
         <h3 id="city"></h3>
@@ -40,13 +56,7 @@
         <p id="humidity">Humidity:</p>
         </div>
     <section id="space">
-      <!-- <div class="main_display">
-        <h2 id="inside">Context</h2>
-        <p id="temp">Temp:</p>
-        <p id="wind">Wind:</p>
-        <p id="humidity">Humidity:</p>
-        </div>
-     -->
+    
       <h3>5-day Forecast:</h3>
         <div class="panel" id="first_panel"></div>
         <div class="panel" id="second_panel"></div>
