--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav>
       <h1>Weather Dashboard</h1>
     </nav>
+    <div class="big">
     <article>
        <div class="city_search">
         <h2>Search for a city:</h2>
@@ -23,7 +24,7 @@
         <br />
         <button  id="search_btn">Search</button id="uwu">
         </div>
-      </div>
+    
       <div class="default_city" id="unu">
         <button id="uwu">Atlanta</button id="uwu">
       </div>
@@ -49,16 +50,23 @@
         <button id="uwu">Austin</button id="uwu">
       </div>
     </article>
-    <div class="main_display">
-        <h3 id="city"></h3>
+    <section class="main">
+        <h3 id="city">city</h3>
         <p id="temp">Temp:</p>
         <p id="wind">Wind:</p>
         <p id="humidity">Humidity:</p>
+        </section>
         </div>
+
     <section id="space">
     
-      <h3>5-day Forecast:</h3>
-        <div class="panel" id="first_panel"></div>
+      <!-- <h3>5-day Forecast:</h3> -->
+        <div class="panel" id="first_panel">
+          <h3 id="city1">city</h3>
+        <p id="temp1">Temp:</p>
+        <p id="wind1">Wind:</p>
+        <p id="humidity1">Humidity:</p>
+        </div>
         <div class="panel" id="second_panel"></div>
         <div class="panel" id="third_panel"></div>
         <div class="panel" id="fourth_panel"></div>
